# BattleClaude

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
battleclaude/: ask.py  bm25.py  bot.py  chat.py  chunk.py  db.py  embed.py  index.py  ingest.py  rerank.py  retrieve.py  synthesize.py
deploy/: battleclaude.service
scripts/: sanity_check.py
